# ESSOS

./: .gitignore  Axis.py  CONTRIBUTING.md  Dynamics.py  ESSOS.py  ESSOS_ORIGINAL_GPU.py  ESSOS_TRY.py  MagneticField.py  Optimizations.txt  Optimizations.txt.REMOVED.git-id  README.md  dependecies_cpu.yml  dependecies_gpu.yml  dependencies-cpu.yml  example.py  example_lorentz.py  pyproject.toml  requirements.txt
Example_Tracing_Particles/: Tracing_particles.py  biot_savart_opt.json.REMOVED.git-id  wout_LandremanPaul2021_QA_reactorScale_lowres_reference.nc.REMOVED.git-id
analysis/: comparison_coils.py  comparison_fl.py  comparison_fo.py  comparison_gc.py  comparison_losses.py  comparison_surfaces.py  fo_integrators.py  gc_integrators.py  gc_vs_fo.py  gradients.py  poincare_plots.py
docs/: conf.py  getting_started.rst  index.rst  requirements.txt
essos/: ESSOS.py  __main__.py  alm.py  alm_convex.py  augmented_lagrangian.py  background_species.py  coil_perturbation.py  coils.py  constants.py  custom_dipole_field.py  dynamics.py  electric_field.py  equations.py  fields.py  multiobjectiveoptimizer.py  objective_functions.py  optimization.py  parameters.py  particles.py  plot.py  qfm.py  surfaces.py  surfaces_mod.py  test.py  tracing.py  util.py
example_vtheta_over_vr/: optimize_gc.py
examples/: Optimizations.txt  biotsavart_SIMSOPT_vs_ESSOS.py  coils_biotsavart_SIMSOPT_vs_ESSOS.py  coils_from_BOOZXFORM.py  coils_from_BOOZ_XFORM.py  coils_from_nearaxis.py  compare_gradients.py  compare_guidingcenter_fullorbit.py  compare_lorentz_gc.py  compare_simsopt.py  compare_trajectories.py  create_coils.py  create_perturbed_coils.py  create_stellarator_coils.py  energy_non_opt.pdf.REMOVED.git-id  energy_opt.pdf.REMOVED.git-id  fieldlines_SIMSOPT_vs_ESSOS.py  find_qfm_surface.py  gc_fl_SIMSOPT_vs_ESSOS.py  get_derivatives_coils_particle_confinement_guidingcenter.py  guiding_center_SIMSOPT_vs_ESSOS copy.py  guiding_center_SIMSOPT_vs_ESSOS.py  non_opt_energy.pdf.REMOVED.git-id  non_opt_energy.png.REMOVED.git-id  (+71 more)
(+342 files in other folders)
