[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["essos"]

[tool.setuptools_scm]
write_to = "essos/version.py"

[project]
name = "essos"
description = "ESSOS: Easy Single-Stage Optimization of Stellarators"
readme = "README.md"
authors = [{ name = "UWPlasma, UW-Madison group", email = "rogerio.jorge@wisc.edu" }]
license = { file = "LICENSE" }
dynamic = ["version"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
keywords = ["Plasma", 
     "Physics", 
     "Simulation",
     "JAX"]
 
dependencies = [ "jax", "scipy", "matplotlib", "diffrax"]
 
requires-python = ">=3.5"

[project.urls]
Homepage = "https://github.com/uwplasma/ESSOS"

[project.scripts]
essos = "essos.__main__:main"
 